subiendo panel whatssap de lubeparts

--- a/front/LubeParts/src/components/Hero.astro
+++ b/front/LubeParts/src/components/Hero.astro
@@ -10,17 +10,17 @@
         class="whitespace-nowrap transition-transform duration-700 ease-in-out animate-carousel"
       >
         <img
-          src="http://localhost:9000/imagenes-trattoria/motos-fondo.jpg"
+          src="https://images-cam93.s3.us-east-1.amazonaws.com/motos-fondo.jpg"
           alt="Moto"
           class="inline-block w-full h-[85vh] object-cover"
         />
         <img
-          src="http://localhost:9000/imagenes-trattoria/crro.jpg"
+          src="https://images-cam93.s3.us-east-1.amazonaws.com/crro.jpg"
           alt="Carro"
           class="inline-block w-full h-[85vh] object-cover"
         />
         <img
-          src="http://localhost:9000/imagenes-trattoria/mula.jpg"
+          src="https://images-cam93.s3.us-east-1.amazonaws.com/mula.jpg"
           alt="Mula"
           class="inline-block w-full h-[85vh] object-cover"
         />
