--- a/front/LubeParts/src/pages/productos.astro
+++ b/front/LubeParts/src/pages/productos.astro
@@ -8,7 +8,7 @@ const products = [
         id: "mobil-super-10w30",
         name: "MobilSuper 10w-30",
         price: 25.99,
-        image: "http://localhost:9000/imagenes-trattoria/motos-fondo.jpg",
+        image: "https://images-cam93.s3.us-east-1.amazonaws.com/motos-fondo.jpg",
         description:
             "Aceite de motor de alto rendimiento para motores de gasolina y diésel. Protección superior contra el desgaste.",
         viscosity: "10W-30",
@@ -17,7 +17,7 @@ const products = [
         id: "ecstar-10w40",
         name: "Ecstar 10w-40",
         price: 28.5,
-        image: "http://localhost:9000/imagenes-trattoria/crro.jpg",
+        image: "https://images-cam93.s3.us-east-1.amazonaws.com/crro.jpg",
         description:
             "Aceite sintético premium para motores de alto rendimiento. Excelente estabilidad térmica y protección.",
         viscosity: "10W-40",
@@ -26,7 +26,7 @@ const products = [
         id: "yamalube-10w40",
         name: "Yamalube 10w-40",
         price: 32.75,
-        image: "http://localhost:9000/imagenes-trattoria/mula.jpg",
+        image: "https://images-cam93.s3.us-east-1.amazonaws.com/mula.jpg",
         description:
             "Aceite específicamente formulado para motocicletas Yamaha. Máxima protección para tu motor.",
         viscosity: "10W-40",
@@ -35,7 +35,7 @@ const products = [
         id: "pro-honda-10w30",
         name: "Pro-Honda 10w-30",
         price: 29.99,
-        image: "http://localhost:9000/imagenes-trattoria/motos-fondo.jpg",
+        image: "https://images-cam93.s3.us-east-1.amazonaws.com/motos-fondo.jpg",
         description:
             "Aceite de motor recomendado por Honda. Garantiza el rendimiento óptimo de tu vehículo.",
         viscosity: "10W-30",
@@ -44,7 +44,7 @@ const products = [
         id: "motul-15w50",
         name: "Motul 15w-50",
         price: 45.0,
-        image: "http://localhost:9000/imagenes-trattoria/crro.jpg",
+        image: "https://images-cam93.s3.us-east-1.amazonaws.com/crro.jpg",
         description:
             "Aceite de motor de alta viscosidad para condiciones extremas. Ideal para motores de alto rendimiento.",
         viscosity: "15W-50",
